  https://sourceforge.net/p/omegat/bugs/795/

  Localisation Updates:

  - Italian localisation updated to 3.5.3 (UI, documentation, scripts, readme)
  - Brazilian Portuguese updated to 3.5 (UI)

----------------------------------------------------------------------
 OmegaT 3.5.3 (2015-12-02)
----------------------------------------------------------------------
  23 Enhancements
   6 Bug fixes
   8 Localisation updates
----------------------------------------------------------------------
3.5.3 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/

  - Improve glossary matching of terms containing numbers
  https://sourceforge.net/p/omegat/feature-requests/1138/

  - Allow suppressing MT retrieval for translated segments
  https://sourceforge.net/p/omegat/feature-requests/1137/

  - Ctrl-M manual call of MT on translated segments
  https://sourceforge.net/p/omegat/feature-requests/1140/

  - Machine translate only current segment, on demand
  https://sourceforge.net/p/omegat/feature-requests/552/

  - Make URLs in Comments, Notes, Glossary panes clickable
  https://sourceforge.net/p/omegat/feature-requests/1141/

  - Back up preferences when a loading error occurs
  https://sourceforge.net/p/omegat/feature-requests/1142/

  - Set focus to "Search for" field if search returns zero hits
  https://sourceforge.net/p/omegat/feature-requests/1143/

  - Allow disabling unescaping of Unicode literals (\uXXXX) in Java
Resource Bundle filter
  https://sourceforge.net/p/omegat/feature-requests/1144/

  - Lazily load StarDict dictionary contents
  https://sourceforge.net/p/omegat/feature-requests/1148/

  - Improve explanation text in the Search window
  https://sourceforge.net/p/omegat/feature-requests/1116/

  - Automatically replace glossary hits when inserting source text
  https://sourceforge.net/p/omegat/feature-requests/1152/
